--- a/Modules/Contact/i18n/en_US.csv
+++ b/Modules/Contact/i18n/en_US.csv
@@ -1,23 +1,28 @@
-"Dashboard Configuration","Dashboard Configuration"
-"Test Button","Abba"
-"Custom Variables","Custom Variables"
-"Add New Variable","Add New Variable"
-"Save and Continue Edit","Save and Continue Edit"
-"Custom Variable ""%1""","Custom Variable ""%1"""
-"New Custom Variable","New Custom Variable"
-Variable,Variable
-"Variable Code","Variable Code"
-"Variable Name","Variable Name"
-"Use Default Variable Values","Use Default Variable Values"
-No,No
-Yes,Yes
-"Variable HTML Value","Variable HTML Value"
-"Variable Plain Value","Variable Plain Value"
-"You deleted the custom variable.","You deleted the custom variable."
-"You saved the custom variable.","You saved the custom variable."
-"Variable Code must be unique.","Variable Code must be unique."
-"Validation has failed.","Validation has failed."
-%1,%1
-"Insert Variable...","Insert Variable..."
-"Variable ID","Variable ID"
+"Page not found.","Page not found."
+"Thanks for contacting us with your comments and questions. We'll respond to you very soon.","Thanks for contacting us with your comments and questions. We'll respond to you very soon."
+"An error occurred while processing your form. Please try again later.","An error occurred while processing your form. Please try again later."
+"Name is missing","Name is missing"
+"Comment is missing","Comment is missing"
+"Invalid email address","Invalid email address"
+"* Required Fields","* Required Fields"
+"Write Us","Write Us"
+"Jot us a note and we’ll get back to you as quickly as possible.","Jot us a note and we’ll get back to you as quickly as possible."
 Name,Name
+Email,Email
+"Phone Number","Phone Number"
+"What’s on your mind?","What’s on your mind?"
+Submit,Submit
+"Contact Form","Contact Form"
+"Name: %name","Name: %name"
+"Email: %email","Email: %email"
+"Phone Number: %telephone","Phone Number: %telephone"
+"Comment: %comment","Comment: %comment"
+"Contacts Section","Contacts Section"
+Contacts,Contacts
+"Contact Us","Contact Us"
+"Enable Contact Us","Enable Contact Us"
+"Email Options","Email Options"
+"Send Emails To","Send Emails To"
+"Email Sender","Email Sender"
+"Email Template","Email Template"
+"Email template chosen based on theme fallback when ""Default"" option is selected.","Email template chosen based on theme fallback when ""Default"" option is selected."
