Added i18n landing page

--- a/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/i18n/en_US.csv
+++ b/Products/XPipe/V1/xpipe-v1-web-portal/src/app/code/Pipe/LandingPage/i18n/en_US.csv
@@ -1,23 +1,26 @@
-"Dashboard Configuration","Dashboard Configuration"
-"Test Button","Abba"
-"Custom Variables","Custom Variables"
-"Add New Variable","Add New Variable"
-"Save and Continue Edit","Save and Continue Edit"
-"Custom Variable ""%1""","Custom Variable ""%1"""
-"New Custom Variable","New Custom Variable"
-Variable,Variable
-"Variable Code","Variable Code"
-"Variable Name","Variable Name"
-"Use Default Variable Values","Use Default Variable Values"
-No,No
-Yes,Yes
-"Variable HTML Value","Variable HTML Value"
-"Variable Plain Value","Variable Plain Value"
-"You deleted the custom variable.","You deleted the custom variable."
-"You saved the custom variable.","You saved the custom variable."
-"Variable Code must be unique.","Variable Code must be unique."
-"Validation has failed.","Validation has failed."
-%1,%1
-"Insert Variable...","Insert Variable..."
-"Variable ID","Variable ID"
-Name,Name
+"Frequently asked questions","Frequently asked questions"
+"Is there a free version of XPipe?","Is there a free version of XPipe?"
+"Yes. The Beta tier is completely free.You get ready made pipeline templates, a limited cloud dev environment, a trial Kubernetes lab, a single user, basic support, and a small quota of pipelines to experiment with XPipe before upgrading.","Yes. The Beta tier is completely free.You get ready made pipeline templates, a limited cloud dev environment, a trial Kubernetes lab, a single user, basic support, and a small quota of pipelines to experiment with XPipe before upgrading."
+"Which pricing plan is right for me?","Which pricing plan is right for me?"
+"Beta is for individuals evaluating XPipe or small PoCs. Pro(€10000/year) for teams that need up to 30 users, 3 concurrent pipelines, IAM, a dedicated dev environment and pro support. Enterprise for organisations that need custom pipeline limits, private template packs, advanced real time deployment, bundled IaaS&monitoring and an SLA tailored to their workload (contact us for a quote).","Beta is for individuals evaluating XPipe or small PoCs. Pro(€10000/year) for teams that need up to 30 users, 3 concurrent pipelines, IAM, a dedicated dev environment and pro support. Enterprise for organisations that need custom pipeline limits, private template packs, advanced real time deployment, bundled IaaS&monitoring and an SLA tailored to their workload (contact us for a quote)."
+"How does the pricing work?","How does the pricing work?"
+"Plans are billed yearly to keep billing simple and reserve capacity in our shared clusters. Pro includes up to 30 users; extra seats are €5/user/year.Enterprise is negotiated per project (we map required resources and SLA, then give you a flat annual fee).","Plans are billed yearly to keep billing simple and reserve capacity in our shared clusters. Pro includes up to 30 users; extra seats are €5/user/year.Enterprise is negotiated per project (we map required resources and SLA, then give you a flat annual fee)."
+"Can I pay monthly instead of yearly?","Can I pay monthly instead of yearly?"
+"For Pro we currently accept yearly payment only (it keeps the admin overhead and card fees down, allowing us to offer more capacity per euro). Enterprise customers can negotiate quarterly or monthly terms as part of the contract.","For Pro we currently accept yearly payment only (it keeps the admin overhead and card fees down, allowing us to offer more capacity per euro). Enterprise customers can negotiate quarterly or monthly terms as part of the contract."
+"What happens if I hit my pipeline or user limit?","What happens if I hit my pipeline or user limit?"
+"XPipe will queue additional pipelines instead of rejecting them. You can upgrade at any time: add extra users (€5/user/year on Pro) request a higher concurrent pipeline quota (Enterprise).","XPipe will queue additional pipelines instead of rejecting them. You can upgrade at any time: add extra users (€5/user/year on Pro) request a higher concurrent pipeline quota (Enterprise)."
+"What if I change my mind?","What if I change my mind?"
+"You can downgrade or cancel at the next renewal date. No questions asked refunds are available within the first 30 days of a Pro subscription; Enterprise refunds follow contractual terms agreed during onboarding.","You can downgrade or cancel at the next renewal date. No questions asked refunds are available within the first 30 days of a Pro subscription; Enterprise refunds follow contractual terms agreed during onboarding."
+"Does XPipe offer plans for students?","Does XPipe offer plans for students?"
+"Yes. We follow a model similar to JetBrains: verified students can request a free educational license of XPipe for non‑commercial learning projects. Simply send a university‑issued e‑mail (or valid student ID) to students@sindria.org and our team will activate your account.","Yes. We follow a model similar to JetBrains: verified students can request a free educational license of XPipe for non‑commercial learning projects. Simply send a university‑issued e‑mail (or valid student ID) to students@sindria.org and our team will activate your account."
+"What payment methods do you accept?","What payment methods do you accept?"
+"At the moment we accept bank transfer only. Once commercial terms are agreed, we issue an invoice with the banking details and activate the subscription after the payment is received.","At the moment we accept bank transfer only. Once commercial terms are agreed, we issue an invoice with the banking details and activate the subscription after the payment is received."
+"One workspace. ","One workspace. "
+"Built for builders who don’t have time to waste.","Built for builders who don’t have time to waste."
+"Freelancer","Freelancer"
+"Spin‑up projects in minutes and focus on shipping, not on YAML‑hell.","Spin‑up projects in minutes and focus on shipping, not on YAML‑hell."
+"Agencies","Agencies"
+"Multi‑tenant labs & reusable templates to keep every client pipeline under control.","Multi‑tenant labs & reusable templates to keep every client pipeline under control."
+"Enterprise","Enterprise"
+"Governance, SSO, and unlimited scalability for mission‑critical workloads.","Governance, SSO, and unlimited scalability for mission‑critical workloads."
+"Let's get started","Let's get started"
